# daves-dev-tools

./: -21.9  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: codeql-analysis.yml  distribute.yml  python-publish.yml  test-distribute.yml  test.yml
daves_dev_tools/: __main__.py  cerberus.py  clean.py  distribute.py  install_editable.py  make_typed.py  utilities.py
daves_dev_tools/git/: download.py
daves_dev_tools/requirements/: update.py  utilities.py
daves_dev_tools/utilities/: cerberus.py
scripts/: clean.sh  distribute.sh  update_setup_requirements.py
tests/: test_cerberus.py  test_git_download.py  test_requirements.py  test_requirements_update.py  test_requirements_utilities.py
tests/test_project/: pyproject.toml  setup.cfg
tests/test_projects/test_project_a/: pyproject.toml  requirements.txt  setup.cfg
