[metadata]
name = test-project
version = 0.0.0

[options]
python_requires = ~=3.6
packages = find:
include_package_data = True
install_requires =
    dataclasses~=0.0;python_version<='3.6'
    pip>=0.0.0
    more-itertools~=0.0

[options.extras_require]
cerberus =
    cerberus-python-client~=0.0
twine =
    twine>=0.0
wheel =
    wheel>=0.0

[options.data_files]
test_project = 
	test_project/py.typed
